--- a/partners/templates/index.html
+++ b/partners/templates/index.html
@@ -222,7 +222,20 @@
       
       <!-- ACCOUNT -->
       <div class='prtn-page prtn-page-account' data-bind='css: selected'>
-          Account
+          <div class="prtn-page-sidebar"> 
+            <ul>
+              <li class='active'>
+                  Partnership <span></span>
+              </li>
+              <li>Account <span></span></li>
+              <li>Pagamenti <span></span></li>
+              <li>Ordini <span></span></li>
+              <li>Messaggi <span></span></li>
+            </ul>
+          </div>
+          <div class='prtn-page-content'>
+            <h1>Partnership</h1>
+          </div>
       </div>
 
       <!-- SIGNUP -->
