--- a/partners/static/css/style.css
+++ b/partners/static/css/style.css
@@ -120,7 +120,7 @@ header {
 
 .navbar-lpi {
   position:absolute;
-  bottom:-30px;
+  bottom:-30px; 
   height:40px;
   padding:0px ;
   width:100%;
@@ -131,6 +131,9 @@ header {
 }
 
 .navbar-nav {
+  width:1000px;
+  float:auto !important;
+  margin:0px auto;
 }
 
 .navbar-nav .active {
@@ -387,4 +390,49 @@ footer .sitemap a:hover {
   margin:10px 0px;
 }
 
+.prtn-page-sidebar {
+  float:left;
+  width:210px;
+  background-image:url('../images/bg-aside.png');
+  background-repeat:repeat-y;
+  background-position: 100% 0px;
+  padding:15px 0px;
+}
+
+
+.prtn-page-inner {
+  width:1000px;
+  margin:20px auto;
+}
+
+.prtn-page-sidebar ul li {
+  height:40px;
+  padding:8px 20px;
+  position:relative;
+}
+
+.prtn-page-sidebar ul li.active {
+  background-image:url('../images/bg-aside-nav-sprite.png');
+  color:#fff;
+}
+
+.prtn-page-sidebar ul li> span {
+  display:none;
+}
+
+.prtn-page-sidebar ul li.active > span {
+  display:block;
+  position:absolute;
+  width:22px;
+  height:40px ;
+  background-image:url('../images/bg-aside-nav-sprite.png');
+  background-position: 100% 0px;
+  z-index:100;
+  right:-22px;
+  top:0px ;
+}
+
+.prtn-page-content {
+  padding:0px 20px 30px 280px;
+}
 
