--- a/partners/templates/index.html
+++ b/partners/templates/index.html
@@ -62,7 +62,9 @@
 			<div class='prtn-page prtn-page-intro' data-bind='css: selected'>
 			  <h1>Partnerships</h1>
 			  <p>
-			  	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			  	LPI Italia, attraverso i suoi programmi di partnership, mette in relazione i soggetti legati al mondo del lavoro in ambito Linux e FOSS (Free ed Open Source Software).<br />
+          Con il programma dedicato alla Formazione intendiamo dare una risposta ai professionisti che vogliono ottenere una certificazione professionale in ambito Linux.<br />
+          Con il programma dedicato a Servizi e consulenze intendiamo soddisfare la richiesta di aziende e professionisti nella ricerca di consulenti competenti su Linux ed Open Source.
 			  </p>
 
   			<div class='prtn-box-container'>
@@ -73,8 +75,8 @@
 
 				 	  	</div>
 				 	  	<div class='prtn-box-desc'>
-				 	  		Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                <a href='#training' class="btn prtn-box-button">cerca una sede</a>
+				 	  		Studia e certificati come amministratore di sistema professionale, cerca l'agenzia formativa certificata più vicina a te.
+                <a href='#training' class="btn prtn-box-button">cerca la sede pi&uacute; vicina</a>
 
 				 	  	</div>
 				 	  </div>
@@ -86,9 +88,9 @@
 				 	  	<div class='prtn-box-icon prtn-box-icon-companies'>
 				 	  	</div>
 				 	  	<div class='prtn-box-desc'>
-				 	  		Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+				 	  		Aziende e professionisti certificati LPI, professionisti in grado di fornire servizi qualificati per le tue esigenze in ambito Linux ed Open Source.
 				 	  	</div>
-				 	  	<a href='#companies' class="btn prtn-box-button">cerca un azienda</a>
+				 	  	<a href='#companies' class="btn prtn-box-button">cerca l'azienda pi&uacute; adatta a te</a>
 
 				 	  </div>
 			 	  </div>
@@ -99,9 +101,9 @@
 				 	  	<div class='prtn-box-icon prtn-box-icon-partner'>
 				 	  	</div>
 				 	  	<div class='prtn-box-desc'>
-				 	  		Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+				 	  		Fornisci servizi legati a Linux ed Open Source? Sei un'agenzia formativa? Diventa partner LPI, attrai nuove opportunit&agrave; professionali!
 				 	  	</div>
-				 	  	<a href='#joinus' class="btn prtn-box-button">le nostre offerte</a>
+				 	  	<a href='#joinus' class="btn prtn-box-button">diventa partner LPI adesso</a>
 
 				 	  </div>
 			 	  </div>
@@ -113,7 +115,9 @@
 			<div class='prtn-page prtn-page-training' data-bind='css: selected'>
 			  <h1>Training</h1>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        In questa sezione puoi trovare Aziende ed Agenzie formative in grado di erogare corsi certificati LPI: Linux Essentials, LPIC-1, LPIC-2 ed LPIC-3.<br />
+        La certificazione professionale LPI &egrave; indice di garanzia e competenza nei confronti di clienti e datori di lavoro.<br />
+        Cerca adesso la sede più vicina a casa tua!
         </p>
         <ul data-bind="foreach: trainers">
            <li>
@@ -131,7 +135,7 @@
 			<div class='prtn-page prtn-page-companies' data-bind='css: selected'>
 			  <h1>Companies</h1>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        In questa sezione puoi trovare Aziende e Professionisti in grado di rispondere alle tue esigenze professionali. I nostri partner vengono accuratamente controllati per garantire la massima qualit&agrave; del servizio. Attraverso la funzione di ricerca puoi definire le competenze necessarie, i giudizi di precedenti clienti e l'area di lavoro. In questo modo potrai scegliere tutte le caratteristiche del tuo nuovo fornitore di servizi IT.
         </p>
         <ul data-bind="foreach: companies">
            <li>
@@ -149,7 +153,7 @@
         <div class="row">
 			  <h1>Scegli la tua partnership</h1>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+       Partecipa ai nostri programmi di partnership, un modo per ottenere visibilit&agrave; e garantire le tue competenze. Attraverso le nostre partnership puoi fornire servizi professionali nel settore che più ti compete e garantire la qualità della tua formazione in aula. 
         </p>
         </div>
 
@@ -160,8 +164,7 @@
               <h3>Formazione</h3>
               <div class='prtn-box-icon'></div>
               <div class='prtn-box-desc'>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              </div>
+              Certifica con LPI i tuoi corsi professionali per Amministratore di Sistema, garantisci qualit&agrave; ai tuoi studenti, renditi visibile attraverso il sito ufficiale del pi&uacute; importante ente di certificazione professionale in ambito Linux al mondo.</div>
               <a data-bind='click: show_training' 
                  class="btn prtn-box-button">maggiori dettagli</a>
             </div>
@@ -188,7 +191,7 @@
              </div>
              <h3>Offerte per la formazione</h3>
              <p class='col-sm-6'>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+             Il programma per la formazione LPI si suddivide in ATP (Approved Training Partner) dedicato ad aziende, agenzie formative, associazione, Pubbliche Amministrazioni, organizzazioni e AAP (Approved Academic Partner) dedicato a scuole ed universit&agrave;.
              </p>
 
              <p class='col-sm-6 '>
@@ -654,7 +657,8 @@
               <div class="row">               
               <h1>Formazione per aziende</h1>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              Il programma di partnership &egrave; dedicato alle aziende che intendono offrire formazione certificata LPI.<br />
+              La suddivisione avviene per il grado di certificazione che è possibile insegnare, LPI ATP LE e LPI ATP PRO.
               </p>
               </div>
 
@@ -663,21 +667,25 @@
               <ul class='prtn-box-container'>
                  <li class='prtn-box col-sm-5'>
                   <div class='prtn-box-inner'>
-                    <h3 data-bind="text: product_low.name"></h3>
+                    <h3>LPI ATP</h3>
                     <div class='prtn-box-icon'></div>
-                    <div class='prtn-box-desc' data-bind='text: product_low.description'></div>
+                    <div class='prtn-box-desc'>
+                    Indicato ad agenzie formative che lavorano con studenti e con un grande pubblico, attraverso questo programma il partner pu&ograve; organizzare corsi di certificazione dedicati a Linux Essentials, la certificazione indicata per chi si avvicina a Linux per iniziare una carriera professionale.
+                    </div>
                     <a data-bind='attr:{href: "#signup/" + product_low.handle()}' 
-                       class="btn prtn-box-button">Acquista</a>
+                       class="btn prtn-box-button">Aderisci ora</a>
                   </div>
                 </li>
 
                 <li class='prtn-box col-sm-5 col-sm-offset-1'>
                   <div class='prtn-box-inner'>
-                    <h3 data-bind="text: product_middle.name"></h3>
+                    <h3>LPI ATP PRO</h3>
                     <div class='prtn-box-icon'></div>
-                    <div class='prtn-box-desc' data-bind='text: product_middle.description'></div>
+                    <div class='prtn-box-desc'>
+                    Indicato per aziende, organizzazioni ed agenzie formative che intendono fornire corsi di certificazione professionale su Linux. I corsi che possono essere erogati comprendono Linux Essentials e le certificazioni LPIC-1, LPIC-2 ed LPIC-3.
+                    </div>
                     <a data-bind='attr:{href: "#signup/" + product_middle.handle()}' 
-                       class="btn prtn-box-button">Acquista</a>
+                       class="btn prtn-box-button">Aderisci ora</a>
                   </div>
                 </li>
               </ul>
@@ -687,9 +695,10 @@
 
             <div data-bind='visible: type() == "training-academy" && show'>
               <div class="row">
-              <h1>Formazione per scuole e universita'</h1>
+              <h1>Formazione per scuole e universit&agrave;</h1>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              Il programma di partnership per scuole ed universit&agrave; che intendono offrire formazione certificata LPI.<br />
+              La suddivisione avviene per il grado di certificazione che è possibile insegnare, LPI AAP LE e LPI AAP PRO.
               </p>
               </div>
 
@@ -697,21 +706,25 @@
               <ul class='prtn-box-container'>
                 <li class='prtn-box col-sm-5'>
                   <div class='prtn-box-inner'>
-                    <h3 data-bind="text: product_low.name"></h3>
+                    <h3>LPI AAP LE</h3>
                     <div class='prtn-box-icon'></div>
-                    <div class='prtn-box-desc' data-bind='text: product_low.description'></div>
+                    <div class='prtn-box-desc'>
+                    Attraverso questo programma il partner pu&ograve; organizzare corsi di certificazione dedicati a Linux Essentials, la certificazione indicata studenti che intendono intraprendere una carriera professionale con Linux.
+                    </div>
                     <a data-bind='attr:{href: "#signup/" + product_low.handle()}' 
-                       class="btn prtn-box-button">Acquista</a>
+                       class="btn prtn-box-button">Aderisci ora</a>
                   </div>
                 </li>
 
                 <li class='prtn-box col-sm-5 col-sm-offset-1'>
                   <div class='prtn-box-inner'>
-                    <h3 data-bind="text: product_middle.name"></h3>
+                    <h3>LPI AAP PRO</h3>
                     <div class='prtn-box-icon'></div>
-                    <div class='prtn-box-desc' data-bind='text: product_middle.description'></div>
+                    <div class='prtn-box-desc'>
+                    Attraverso questo programma il partner pu&ograve; organizzare corsi di certificazione professionale su Linux. I corsi che possono essere erogati comprendono, oltre a Linux Essentials, le certificazioni LPIC-1, LPIC-2 ed LPIC-3.
+                    </div>
                     <a data-bind='attr:{href: "#signup/" + product_middle.handle()}' 
-                       class="btn prtn-box-button">Acquista</a>
+                       class="btn prtn-box-button">Aderisci ora</a>
                   </div>
                 </li>
               </ul>
