--- a/partners/templates/index.html
+++ b/partners/templates/index.html
@@ -149,6 +149,14 @@
         </ul>
 			</div>
 
+      <div class='prtn-page prtn-page-teachers' data-bind='css: selected'>
+        <h1>Docenti</h1>
+        <p>
+        
+        </p>
+        
+      </div>
+
 			<div class='prtn-page prtn-page-joinus' data-bind='css: selected'>
         <div class="row">
 			  <h1>Scegli la tua partnership</h1>
@@ -883,6 +891,7 @@
 
   <script type='text/javascript' src='{% static "js/viewmodels/base.js" %}'></script>
   <script type='text/javascript' src='{% static "js/viewmodels/companies.js" %}'></script>
+  <script type='text/javascript' src='{% static "js/viewmodels/teachers.js" %}'></script>
   <script type='text/javascript' src='{% static "js/viewmodels/training.js" %}'></script>
   <script type='text/javascript' src='{% static "js/viewmodels/joinus.js" %}'></script>
   <script type='text/javascript' src='{% static "js/viewmodels/signup.js" %}'></script>
