--- a/partners/templates/index.html
+++ b/partners/templates/index.html
@@ -152,7 +152,8 @@
       <div class='prtn-page prtn-page-teachers' data-bind='css: selected'>
         <h1>Docenti</h1>
         <p>
-        
+       Se sei un professionista certificato Linux Essentials, LPIC-1, LPIC-2 o LPIC-3, puoi aderire al nostro programma di partnership per docenti. Attraverso questo programma puoi collaborare attivamente con i nostri partner per la formazione ATP LE, ATP LE, AAP PRO e ATP PRO.<br />
+       Per erogare un corso certificato i partner hanno l'obbligo di impiegare un docente certificato di livello pari o superiore al corso che intendono organizzare, un'occasione unica per trovare nuove opportunit&agrave; lavorative!
         </p>
         
       </div>
@@ -183,7 +184,7 @@
               <h3>Servizi e consulenze</h3>
               <div class='prtn-box-icon'></div>
               <div class='prtn-box-desc'>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              Certifica la tua azienda con LPI, garantisci la qualità di servizi e consulenze, contraddistinguiti dalla concorrenza mostrando le tue competenze ed i tuoi servizi attraverso il sito ufficiale di LPI.
               </div>
               <a data-bind='click: show_companies' 
                  class="btn prtn-box-button">maggiori dettagli</a>
@@ -220,7 +221,7 @@
              </div>
              <h3>Offerte per le societa' di servizi</h3>
              <p class='col-sm-6'>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+             Il programma di certificazione di servizi e consulenze &egrave; dedicata ad aziende e professionisti. Con un controllo da parte del nostro staff e le recensioni dei tuoi clienti, puoi dimostrare la tua competenza, esperienza e professionalità a nuovi potenziali clienti.
              </p>
              <p class='col-sm-6'>
                  <a href='#offers/service-company'>vai all'offerta per le aziende</a>
@@ -620,7 +621,8 @@
               <div class="row">
               <h1>Servizi e consulenza</h1>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              In questa sezione puoi trovare i nostri programmi di partnership dedicati alle aziende ed ai professionisti che erogano servizi in ambiente Linux ed Open Source.<br />
+              Attraverso i programmi LPI SP (Solution Provider), LPI CSP (Certified Solution Provider) e LPI CSP (Certified Solution Provider) Gold puoi essere trovato da nuovi clienti in base ai servizi che offri ed alle tue effetive competenze.
               </p>
               </div>
 
@@ -628,9 +630,13 @@
               <ul class='prtn-box-container'>
                 <li class='prtn-box col-sm-3'>
                   <div class='prtn-box-inner'>
-                    <h3 data-bind="text: product_low.name"></h3>
+                    <h3>LPI SP</h3>
                     <div class='prtn-box-icon'></div>
-                    <div class='prtn-box-desc' data-bind='text: product_low.description'></div>
+                    <div class='prtn-box-desc'>
+                    <p>
+                    LPI SP (Service Provider) &egrave; il programma di partnership che ti permette di mostrare i servizi offerti legati a Linux e all'Open Source (es: installazione e configurazione CMS, amministrazione di sistema Linux, sviluppo e personalizzazione software).
+                    </p>
+                    </div>
                     <a data-bind='attr:{href: "#signup/" + product_low.handle()}' 
                        class="btn prtn-box-button">Acquista</a>
                   </div>
@@ -638,9 +644,14 @@
 
                 <li class='prtn-box col-sm-3 col-sm-offset-1'>
                   <div class='prtn-box-inner'>
-                    <h3 data-bind="text: product_middle.name"></h3>
+                    <h3>LPI CSP</h3>
                     <div class='prtn-box-icon'></div>
-                    <div class='prtn-box-desc' data-bind='text: product_middle.description'></div>
+                    <div class='prtn-box-desc'>
+                    <p>
+                    LPI CSP (Certified Solution Provider) &egrave; il programma di partnership che ti permette di mostrare i servizi offerti legati a Linux e all'Open Source (es: installazione e configurazione CMS, amministrazione di sistema Linux, sviluppo e personalizzazione software).<br />
+                    Attraverso questo programma lo staff di LPI Italia controlla e certifica la qualit&agrave; dei servizi offerti dalla tua azienda attraverso la certificazione LPIC-1 dei tuoi collaboratori e la referenza di almeno uno dei tuoi clienti.
+                    </p>
+                    </div>
                     <a data-bind='attr:{href: "#signup/" + product_middle.handle()}' 
                        class="btn prtn-box-button">Acquista</a>
                   </div>
@@ -648,9 +659,14 @@
 
                 <li class='prtn-box col-sm-3 col-sm-offset-1'>
                   <div class='prtn-box-inner'>
-                    <h3 data-bind="text: product_pro.name"></h3>
+                    <h3>LPI CSP GOLD</h3>
                     <div class='prtn-box-icon'></div>
-                    <div class='prtn-box-desc' data-bind='text: product_pro.description'></div>
+                    <div class='prtn-box-desc'>
+                    <p>
+                    LPI CSP (Certified Solution Provider) &egrave; il programma di partnership che ti permette di mostrare i servizi offerti legati a Linux e all'Open Source (es: installazione e configurazione CMS, amministrazione di sistema Linux, sviluppo e personalizzazione software).<br />
+                    Attraverso questo programma lo staff di LPI Italia controlla e certifica la qualit&agrave; dei servizi offerti dalla tua azienda attraverso la certificazione LPIC-1 ed LPIC-2 dei tuoi collaboratori e la referenza di almeno due tuoi clienti.
+                    </p>
+                    </div>
                     <a data-bind='attr:{href: "#signup/" + product_pro.handle()}' 
                        class="btn prtn-box-button">Acquista</a>
                   </div>
